volexc/tests/ui/service_as_type.out
Error: services cannot be used as types
   ╭─[ service_as_type.vol:2:11 ]
   │
 2 │     name: MyService = 1;
   │           ────┬────  
   │               ╰────── service used as type
───╯