volexc/tests/ui/service_as_type.vol
message Event {
    name: MyService = 1;
}

service MyService {
}
